fix: css and js

--- a/Cricket Stream.html
+++ b/Cricket Stream.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket Stream</title>
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/Gedipey/streams/main/favicon.ico">
-	<link rel="stylesheet" href="../static/style.css">
+	<link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/4b1a854c0b.js" crossorigin="anonymous"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -41,6 +41,6 @@
     <h1 id="heads">Cricket Stream</h1>
     <iframe id="fr" src="abc" style="background-color: black;" width="65%" height="520px"  marginheight="0" marginwidth="0" scrolling="no" frameborder="0" allowfullscreen  allow="encrypted-media"></iframe>
 </div>
-<script src="../static/index.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
