Update and rename Cricket Stream.html to Index.html

--- a/Index.html
+++ b/Index.html
@@ -41,6 +41,6 @@
     <h1 id="heads">Cricket Stream</h1>
     <iframe id="fr" src="abc" style="background-color: black;" width="65%" height="520px"  marginheight="0" marginwidth="0" scrolling="no" frameborder="0" allowfullscreen  allow="encrypted-media"></iframe>
 </div>
-<script src="./index.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
