--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cricket Stream</title>
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/Gedipey/streams/main/favicon.ico">
-	<link rel="stylesheet" href="./style.css">
-    <script src="https://kit.fontawesome.com/4b1a854c0b.js" crossorigin="anonymous"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-</head>
-<body>
-<div class="channels">
-    <div class="menu-c">
-    <h2>Channels</h2>
-    <div id="bl1">
-    <button name="menu_btn" id="menu_btn" type="button" style="background-color: transparent; border: none;" onclick="hide_menu()"><img src='https://raw.githubusercontent.com/Gedipey/streams/main/134216_menu_lines_hamburger_icon.svg' alt='menu'></button>
-    </div>
-    </div>
-    <div id="btns">
-    <button name="star_sports" class="btn" type="button" id="star_sports" onclick="loadchannel('Star Sports')">Star Sports</button>
-    <button name="starsports_hindi" class="btn" type="button" id="starsports_hindi" onclick="loadchannel('Star Sports Hindi')">Star Sports Hindi</button>
-    <button name="sky_sports" class="btn" type="button" id="sky_sports" onclick="loadchannel('Sky Sports')">Sky Sports</button>
-    <button name="astro_cricket" class="btn" type="button" id="astro_cricket" onclick="loadchannel('Astro Cricket')">Astro Cricket</button>
-    <button name="willow_cricket" class="btn" type="button" id="willow_cricket" onclick="loadchannel('Willow Cricket')">Willow Cricket</button>
-    <button name="ptv_sports" class="btn" type="button" id="ptv_sports" onclick="loadchannel('PTV Sports')">PTV Sports</button>
-    <button name="supersport" class="btn" type="button" id="supersport" onclick="loadchannel('SuperSports Cricket')">Supersports Cricket</button>
-    <button name="fox_sports" class="btn" type="button" id="fox_sports" onclick="loadchannel('Fox Sports')">Fox Sports</button>
-    <button name="ten sports" class="btn" type="button" id="ten sports" onclick="loadchannel('Ten Sports')">Ten Sports</button>
-    </div>
-</div>
-<div id="disp">
-    <h1 id="heads">Cricket Stream</h1>
-    <iframe id="fr" src="abc" style="background-color: black;" width="65%" height="520px"  marginheight="0" marginwidth="0" scrolling="no" frameborder="0" allowfullscreen  allow="encrypted-media"></iframe>
-</div>
-<script src="./script.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Cricket Stream</title>
+        <link rel="shortcut icon" href="https://raw.githubusercontent.com/Gedipey/streams/main/favicon.ico">
+        <link rel="stylesheet" href="./style.css">
+        <script src="https://kit.fontawesome.com/4b1a854c0b.js" crossorigin="anonymous"></script>
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="channels">
+            <div class="menu-c">
+                <h2>Channels</h2>
+                <div id="bl1">
+                    <button name="menu_btn" id="menu_btn" type="button" style="background-color: transparent; border: none;" onclick="hide_menu()"><img src='https://raw.githubusercontent.com/Gedipey/streams/main/134216_menu_lines_hamburger_icon.svg' alt='menu'></button>
+                </div>
+            </div>
+            <div id="btns">
+                <button name="star_sports" class="btn" type="button" id="star_sports" onclick="loadchannel('Star Sports')">Star Sports</button>
+                <button name="star_sports_2" class="btn" type="button" id="star_sports_2" onclick="loadchannel('Star Sports 2')">Star Sports 2</button>
+                <button name="starsports_hindi" class="btn" type="button" id="starsports_hindi" onclick="loadchannel('Star Sports Hindi')">Star Sports Hindi</button>
+                <button name="sky_sports" class="btn" type="button" id="sky_sports" onclick="loadchannel('Sky Sports')">Sky Sports</button>
+                <button name="astro_cricket" class="btn" type="button" id="astro_cricket" onclick="loadchannel('Astro Cricket')">Astro Cricket</button>
+                <button name="willow_cricket" class="btn" type="button" id="willow_cricket" onclick="loadchannel('Willow Cricket')">Willow Cricket</button>
+                <button name="ptv_sports" class="btn" type="button" id="ptv_sports" onclick="loadchannel('PTV Sports')">PTV Sports</button>
+                <button name="supersport" class="btn" type="button" id="supersport" onclick="loadchannel('SuperSports Cricket')">Supersports Cricket</button>
+                <button name="fox_sports" class="btn" type="button" id="fox_sports" onclick="loadchannel('Fox Sports')">Fox Sports</button>
+                <button name="ten_sports" class="btn" type="button" id="ten sports" onclick="loadchannel('Ten Sports')">Ten Sports</button>
+                <button name="sony_sports_1" class="btn" type="button" id="sony sports 1" onclick="loadchannel('Sony Sports 1')">Sony Sports 1</button>
+            </div>
+        </div>
+        <div id="disp">
+            <h1 id="heads">Cricket Stream</h1>
+            <iframe id="fr" src="abc" style="background-color: black;" width="65%" height="520px"  marginheight="0" marginwidth="0" scrolling="no" frameborder="0" allowfullscreen  allow="encrypted-media"></iframe>
+        </div>
+        <script src="./script.js"></script>
+    </body>
 </html>
 
